# microfluidic-demo

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  docker-compose.production.yml  pyproject.toml  start_dashboard.sh
configs/: simulation_defaults.yaml  slideshow_content.yaml
configs/channels/: branched_tree.yaml  custom_hybrid.yaml  fractal_network.yaml  high_density_micro.yaml  optimized_parallel_40ch_300um.yaml  serpentine_grid.yaml  straight_parallel.yaml  variable_width.yaml
configs/chips/: amd_epyc_cpu.yaml  arm_custom_low_power.yaml  intel_xeon_cpu.yaml  nvidia_a100_gpu.yaml  nvidia_h100_gpu.yaml
docker/: Dockerfile.dashboard  Dockerfile.simulation  docker-compose.yml
scripts/: generate_hero_slideshow.py  optimize_outlet_temp.py
src/mfdemo/: config_loader.py  slideshow_component.py
src/mfdemo/core/: __init__.py  channel_network.py  grid.py  heat_source.py
src/mfdemo/models/: config.py
src/mfdemo/solvers/: convective_coupling.py  microfluidic_solver.py  thermal_solver.py
src/mfdemo/visualization/: plotly_viz.py
static/hero_slideshow/: simulation_physics_report.json  slideshow_metadata.json
